--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </div>
           </div>
           <div class="cnt_irun">
-            <div id="irun" class="irun disabled" title="Run">
+            <div id="irun" class="irun" title="Run">
               <div id="panel_tl" class="panel_tl"></div>
             </div>
           </div>
