--- a/index copy.html
+++ b/index copy.html
@@ -94,6 +94,7 @@
           <div class="cnt_sections">
             <div class="sections">
               <div class="newAttContent">
+                <!-- >> Contribution -->
                 <div class="lineTwoFields">
                   <div class="lineTwoFields-lbl">
                     <div class="lbl">Did this advocacy activity take place over an extended period of time? If so, please indicate the end date or, if it is not yet complete, indicate that it is on-going</div>
@@ -125,6 +126,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- << Contribution -->
                 <div class="fields">
                   <div class="lbl">What SRHRJ need is this related to?</div>
                   <select
