--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
               </div>
               <div class="grd_srv">
                 <div id="NeedsSelect" class="selector" addSelectedOption()>
-                        <div id="NeedsSelectd" class="selected"></div>
+                  <div id="txtHdrNeeds">Needs</div>
+                  <div id="NeedsSelectd" class="selected"></div>
                   <div class="icono">&#x25BC;</div>
                   <div id="needsOptions" class="options"></div>
                 </div>
