--- a/index copy.html
+++ b/index copy.html
@@ -40,21 +40,14 @@
 
   <body>
     <div class="wrapper">
-      <div class="dlg_i d_lgnd0">
-        <div class="dlg_bar lgnd0_g">
-          <div class="dlg_title">Contributions</div>
-          <div class="dlg_cta lgnd0_g"><div class="btn-sys-close"></div></div>
+      <div class="top-r-dlg">
+        <div class="toggle-btn-dlg lgnd1_g" id="button1">
+          <div class="i_dlg_doc"></div>
+          <span class="label" id="label1">Documents</span>
         </div>
-        <div class="dlg_cnt">
-          <div class="cnt_sections">
-            <div class="scrs">
-              Aliquam consequat ut erat vitae tincidunt. Donec fringilla posuere
-              quam, sed aliquet quam rutrum quis. Aenean euismod nulla non sem
-              pharetra, sit amet luctus tortor pulvinar. Quisque consectetur
-              lectus vitae hendrerit euismod. Sed non lobortis eros. Sed
-              accumsan eget justo eu varius.
-            </div>
-          </div>
+        <div class="toggle-btn-dlg lgnd1_g" id="button2">
+          <div class="i_dlg_imgs"></div>
+          <span class="label" id="label2">Images</span>
         </div>
       </div>
     </div>
