--- a/index.html
+++ b/index.html
@@ -4,12 +4,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FosFem - advocacy timeline</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <!-- CSS de Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <link rel="stylesheet" href="src/assets/css/main.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+
+    <!-- JavaScript Bundle con Popper -->
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="src/scripts/main.js"></script>
+
     <script src="src/scripts/html2canvas.js"></script>
     <script src="src/scripts/jspdf.js"></script>
   </head>
@@ -138,7 +162,7 @@
             </div>
           </div>
           <div class="cnt_irun">
-            <div id="irun" class="irun disabled" title="Run">
+            <div id="irun" class="irun" title="Run">
               <div id="panel_tl" class="panel_tl"></div>
             </div>
           </div>
@@ -152,43 +176,44 @@
           <div class="grd_srh">
             <div class="cnt_sort">
               <div class="grd_ou">
-
                 <div id="orgUnitsSelect" class="selector" addSelectedOption()>
-                  <div id='txtHdrOrgUnits'>O.Unit</div>
+                  <div id="txtHdrOrgUnits">O.Unit</div>
                   <div id="orgUnitsSelectd" class="selected"></div>
                   <div class="icono">&#x25BC;</div>
                   <div id="orgUnitsOptions" class="options"></div>
                 </div>
-
               </div>
               <div class="grd_srv">
-
-                  <div id="NeedsSelect" class="selector" addSelectedOption()>
-                    <div id='txtHdrNeeds'>Needs</div>
-                    <div id="NeedsSelectd" class="selected"></div>
-                    <div class="icono">&#x25BC;</div>
-                    <div id="needsOptions" class="options"></div>
-                  </div>
-
+                <div id="NeedsSelect" class="selector" addSelectedOption()>
+                  <div id="txtHdrNeeds">Needs</div>
+                  <div id="NeedsSelectd" class="selected"></div>
+                  <div class="icono">&#x25BC;</div>
+                  <div id="needsOptions" class="options"></div>
+                </div>
               </div>
               <div class="grd_yrs">
-                
                 <div id="YearsSelect" class="selector" addSelectedOption()>
-                  <div id='txtHdrYears'>Year/s</div>
+                  <div id="txtHdrYears">Year/s</div>
                   <div id="YearsSelectd" class="selected"></div>
                   <div class="icono">&#x25BC;</div>
                   <div id="yearsOptions" class="options"></div>
                 </div>
-
               </div>
-              <div class="disabled">
-                <div class="grd_sort">Sort Timeline</div>
-                <label class="label">Ascending </label>
-                <label class="switch">
-                  <input type="checkbox" id="mySwitch" />
-                  <span class="slider round"></span>
-                </label>
-                <label class="label">Descending</label>
+              <div class="grd_sort">
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="years" id="youngestOldest" value="option1" checked>
+                  <label class="form-check-label" for="years">Ascending </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="years" id="oldestYoungest" value="option2">
+                  <label class="form-check-label" for="years">Descending</label>
+                </div>
+              </div>
+              <div class="grd_team">
+                <div class="form-check">
+                  <input class="form-check-input" type="checkbox" value="" id="FOSteam">
+                  <label class="form-check-label" for="FOSteam">FOS Team</label>
+                </div>
               </div>
             </div>
           </div>
@@ -202,9 +227,7 @@
               </div>
             </div>
           </div>
-          <div class="grd_footer">
-            © FOS Feminista.
-          </div>
+          <div class="grd_footer">© FOS Feminista.</div>
         </div>
       </div>
 
